<resources>
    <string name="sync">Sync</string>
    <string name="last_sync_timestamp">Last: %1$s</string>
    <string name="language">Language</string>
    <string name="logout_as_user">Log out as </string>
    <string name="show_overdue">Show overdue</string>
    <string name="search_hint">Search name or ID</string>
    <string name="scan_bar_code">SCAN BARCODE</string>
    <string name="empty_client_list_message_title">No Results</string>
    <string name="empty_client_list_message_details">Sorry, we could not find client with given name or ID</string>
    <string name="register_new_client">Register new client</string>
    <string name="default_app_title" translatable="false">Fhir App</string>
    <string name="app_logo">Application logo</string>
    <string name="powered_by">Powered By</string>
    <string name="app_version">App version %1$d(%2$s)</string>
    <string name="login_text">LOGIN</string>
    <string name="username_input_hint">Enter username</string>
    <string name="password_input_hint">Enter password</string>
    <string name="login_call_fail_error_message">Failed to verify credentials from the server. Check your internet connection</string>
    <string name="userinfo_call_fail_error_message">Failed to get user info from server. Check your internet connection</string>
    <string name="select_language">Select Language</string>
    <string name="logout_user">Log out as %1$s</string>
    <string name="sync_completed">Sync complete</string>
    <string name="syncing">Syncing&#8230;</string>
    <string name="syncing_initiated">Sync initiated&#8230;</string>
    <string name="sync_failed">Sync failed. Check internet connection or try again later.</string>
    <string name="try_again">Try again</string>
    <string name="status_vaccinated">Vaccinated</string>
    <string name="status_overdue">Overdue</string>
    <string name="status_received_vaccine">Vaccine %1$d \n%2$s</string>
    <string name="fully_vaccinated">"Fully vaccinated"</string>
    <string name="already_fully_vaccinated">"Can not receive another dose. Already fully vaccinated"</string>
    <string name="record_vaccine_nl">Record\nVaccine</string>
    <string name="date_last_seen">Last seen %1$s</string>
    <string name="date_last_visited">Last visited %1$s</string>
    <string name="str_save">Save</string>
    <string name="login_error">Login error: %1$s</string>
    <string name="str_next">NEXT</string>
    <string name="str_previous">PREVIOUS</string>
    <string name="str_page_info">Page %1$d of %2$d</string>
    <string name="search_result">%1$d RESULT(S)</string>
    <string name="no_results">No results</string>
    <string name="no_results_message">Sorry we can\'t find person with the provided name or ID</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="unknown">Unknown</string>
    <string name="syncing_failed">Sync failed</string>
    <string name="syncing_retry">Retry sync</string>
    <string name="syncing_in_progress">Sync in progress</string>
    <string name="loading">Loading</string>
    <string name="error_contacting_server">Error contacting server. Error code %1$s</string>
    <string name="error_loading_config">Error loading configuration. Details: %1$s</string>
    <string name="error_loading_form">Error loading form</string>
    <string name="error_saving_form">Error encountered cannot save form</string>
    <string name="form_progress_message">Processing data. Please wait</string>
    <string name="questionnaire_alert_back_pressed_message">Are you sure you want to go back?</string>
    <string name="questionnaire_alert_back_pressed_title">Discard changes</string>
    <string name="questionnaire_alert_back_pressed_button_title">Discard</string>
    <string name="questionnaire_alert_submit_message">Please confirm that you have all details filled in before submission</string>
    <string name="questionnaire_alert_submit_title">Submit details</string>
    <string name="questionnaire_alert_submit_button_title">Save</string>
    <string name="questionnaire_alert_test_only_message">Confirm that you are finished filling out the data. Note this is test only form and does not save any data</string>
    <string name="questionnaire_alert_test_only_title">Process form data</string>
    <string name="questionnaire_alert_test_only_button_title">Process</string>
    <string name="questionnaire_alert_neutral_button_title">Cancel</string>
    <string name="questionnaire_alert_confirm_button_title">Yes</string>
    <string name="questionnaire_alert_invalid_message">Given details have validation errors. Resolve errors and submit again</string>
    <string name="questionnaire_alert_invalid_title">Validation Failed</string>
    <string name="questionnaire_alert_ack_button_title">Ok</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_title">Forgot Password!</string>
    <string name="more">More</string>
    <string name="call_supervisor">Please call your supervisor at %1$s</string>
    <string name="cancel">CANCEL</string>
    <string name="dial_number">DIAL NUMBER</string>
    <string name="register">Register</string>
    <string name="tasks">Tasks</string>
    <string name="visits">Visits</string>
    <string name="clinic_visit">Clinic Visit</string>
    <string name="clinic_visits">Clinic Visits</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="select_register">Select register</string>
    <string name="tick">Tick</string>
    <string name="clients">Clients</string>
    <string name="logout">Log out</string>
    <string name="application_id">Application ID</string>
    <string name="enter_app_id">Enter Application ID</string>
    <string name="app_id_sample" translatable="false">E.g. anc, covax, g6pd, jnj, quest</string>
    <string name="load_configurations">LOAD CONFIGURATIONS</string>
    <string name="fhir_core_app" translatable="false">FHIRCORE APP</string>
    <string name="remember_app">Remember application</string>
    <string name="done">Done</string>
    <string name="replace_photo">Replace photo</string>
    <string name="take_photo">Take photo</string>
    <string name="edit">Edit</string>
    <string name="application_not_supported">Application %1$s not found</string>
    <string name="eCBIS_app_name" translatable="false">eCBIS</string>
    <string name="invalid_login_credentials">username or password is invalid</string>
    <string name="invalid_form_id">"Invalid form id attached"</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="required_constraint_validation_error_msg">There is no response to the required field.</string>
    <string name="set_pin">Set Pin</string>
    <string name="set_pin_message">CHA will use this pin to login</string>
    <string name="enter_login_pin">Enter the user\'s pin</string>
    <string name="enter_pin_for_user">Enter pin for %1$s</string>
    <string name="incorrect_pin_please_retry">Incorrect pin, lease try again</string>
    <string name="pin_menu_login">Login</string>
    <string name="forgot_pin">Forgot pin?</string>
    <string name="please_contact_supervisor">Please contact your supervisor.</string>
    <string name="percentage">%</string>
    <string name="logging_out">Please wait.... Logging out</string>
    <string name="session_expired">Session has been expired and must login again</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="dob">DOB</string>
    <string name="id">ID: %1$s</string>
    <string name="idKeyValue">%1$s: %2$s</string>
    <string name="see_all">SEE ALL</string>
    <string name="forms">FORMS</string>
    <string name="medical_history">MEDICAL HISTORY</string>
    <string name="upcoming_services">UPCOMING SERVICES</string>
    <string name="service_card">SERVICE CARD</string>
    <string name="sync_strategy_careteam_system">https://smartregister.org/</string>
    <string name="sync_strategy_location_system">https://smartregister.org/</string>
    <string name="sync_strategy_organization_system">https://smartregister.org/</string>
    <string name="sync_strategy_practitioner_system">https://smartregister.org/</string>
    <string name="sync_strategy_careteam_display">Practitioner CareTeam</string>
    <string name="sync_strategy_location_display">Practitioner Location</string>
    <string name="sync_strategy_organization_display">Practitioner Organization</string>
    <string name="sync_strategy_practitioner_display">Practitioner</string>
</resources>
